; ModuleID = '/home/carl/AnghaBench/sway/sway/extr_main.c_run_as_ipc_client.c'
source_filename = "/home/carl/AnghaBench/sway/sway/extr_main.c_run_as_ipc_client.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@IPC_COMMAND = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @run_as_ipc_client(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = call i32 @ipc_open_socket(i8* %8)
  store i32 %9, i32* %5, align 4
  %10 = load i8*, i8** %3, align 8
  %11 = call i32 @strlen(i8* %10)
  store i32 %11, i32* %6, align 4
  %12 = load i32, i32* %5, align 4
  %13 = load i32, i32* @IPC_COMMAND, align 4
  %14 = load i8*, i8** %3, align 8
  %15 = call i8* @ipc_single_command(i32 %12, i32 %13, i8* %14, i32* %6)
  store i8* %15, i8** %7, align 8
  %16 = load i8*, i8** %7, align 8
  %17 = call i32 @printf(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i8* %16)
  %18 = load i8*, i8** %7, align 8
  %19 = call i32 @free(i8* %18)
  %20 = load i32, i32* %5, align 4
  %21 = call i32 @close(i32 %20)
  ret void
}

declare dso_local i32 @ipc_open_socket(i8*) #1

declare dso_local i32 @strlen(i8*) #1

declare dso_local i8* @ipc_single_command(i32, i32, i8*, i32*) #1

declare dso_local i32 @printf(i8*, i8*) #1

declare dso_local i32 @free(i8*) #1

declare dso_local i32 @close(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
